--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,7 +141,7 @@ orbs:
                           --arg workflowId "${CIRCLE_WORKFLOW_ID}" \
                           --arg repoName "${CIRCLE_PROJECT_REPONAME}" \
                           --arg display "${CIRCLE_PROJECT_REPONAME}"  \
-                          --arg description "${CIRCLE_PROJECT_REPONAME} #${CIRCLE_BUILD_NUM} ${CIRCLE_JOB}"
+                          --arg description "${CIRCLE_PROJECT_REPONAME} #${CIRCLE_BUILD_NUM} ${CIRCLE_JOB}" \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
@@ -186,7 +186,7 @@ orbs:
                           --arg description "${CIRCLE_PROJECT_REPONAME} #${CIRCLE_PIPELINE_NUMBER} ${CIRCLE_JOB} <<parameters.environment>>" \
                           --arg envId "${CIRCLE_WORKFLOW_ID}-<<parameters.environment>>" \
                           --arg envName "<<parameters.environment>>" \
-                          --arg envType "<<parameters.environment_type>>"
+                          --arg envType "<<parameters.environment_type>>" \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
