--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ orbs:
                           --arg repoName "${CIRCLE_PROJECT_REPONAME}" \
                           --arg display "${CIRCLE_PROJECT_REPONAME}"  \
                           --arg description "${CIRCLE_PROJECT_REPONAME} #${CIRCLE_BUILD_NUM} ${CIRCLE_JOB}" \
-                          --argjson issueKeys "${ISSUE_KEYS}" \
+                          --argjson issueKeys "["<<parameters.jira_keys>>"]" \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
@@ -188,7 +188,7 @@ orbs:
                           --arg envId "${CIRCLE_WORKFLOW_ID}-<<parameters.environment>>" \
                           --arg envName "<<parameters.environment>>" \
                           --arg envType "<<parameters.environment_type>>" \
-                          --argjson issueKeys "${ISSUE_KEYS}" \
+                          --argjson issueKeys "["<<parameters.jira_keys>>"]" \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
