--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,7 +282,7 @@ orbs:
                     when: always
     orbs:
         jq: circleci/jq@2.2
-
+  cci-jira: circleci/jira@1.3.1
 
 parameters:
   jira_keys:
@@ -297,9 +297,15 @@ jobs:
     steps:
       - jira/notify:
           jira_keys: << pipeline.parameters.jira_keys >>
+  cci-job:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - cci-jira/notify
 
 workflows:
   my-workflow:
     jobs:
       - my-job
+      - cci-job
  
