--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -145,7 +145,7 @@ orbs:
                           --arg repoName "${CIRCLE_PROJECT_REPONAME}" \
                           --arg display "${CIRCLE_PROJECT_REPONAME}"  \
                           --arg description "${CIRCLE_PROJECT_REPONAME} #${CIRCLE_BUILD_NUM} ${CIRCLE_JOB}" \
-                          --argjson issueKeys "['<< parameters.jira_keys >>']" \
+                          --argjson issueKeys '["<< parameters.jira_keys >>"]' \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
@@ -191,7 +191,7 @@ orbs:
                           --arg envId "${CIRCLE_WORKFLOW_ID}-<<parameters.environment>>" \
                           --arg envName "<<parameters.environment>>" \
                           --arg envType "<<parameters.environment_type>>" \
-                          --argjson issueKeys "['<< parameters.jira_keys >>']" \
+                          --argjson issueKeys '["<< parameters.jira_keys >>"]' \
                           '
                           ($time_str | tonumber) as $time_num |
                           {
