Update config.yml GOOG-2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -287,7 +287,7 @@ orbs:
 parameters:
   jira_keys:
     default: ""
-    description: The key for jira that needs to be set.
+    description: The key for jira that needs to be set
     type: string
 
 jobs:
