Update config.yml GOOG-2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -303,6 +303,7 @@ jobs:
     steps:
       - cci-jira/notify
       - run: cat /tmp/jira-status.json
+      - run: echo $ISSUE_KEYS
 
 workflows:
   my-workflow:
